--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ header {
     padding: 0 10px;
 }
 
-.container {
+#container {
     width: 960px;
     position: relative;
     top: 100px;
@@ -93,6 +93,19 @@ header {
     padding: 20px 10px 20px 10px;
     margin: 10px;
     z-index: -1;
+}
+
+#form {
+    width: 960px;
+    position: relative;
+    top: 100px;
+    left: 19%;
+    background-color: #ffffff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #333;
+    line-height: 150%;
+    padding: 20px 10px 20px 10px;
+    margin: 10px;
 }
 
 h2 {
