--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,32 +7,12 @@
   }
 
 body {
-    position: fixed;
-    top: 0;
-    left: calc(50% - 480px);
-    height: 100vh;
-    padding: 0;
-    margin: 0;
     background-image: url("../images/circles-light.png");
 }
 
-/* header {
-    width: 100%;
-    height: 81px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #ffffff;
-    border-bottom: 2px solid #cccccc;
-    padding: 0;
-    margin: 0;
-} */
-
 .topcontainer {  
- /*   width: 960px; */
     position: fixed;
     top: 0;
-/*  left: 20%; */
     left: calc(50% - 480px);
     background-color: #ffffff;
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -57,7 +37,6 @@ body {
     float: left;
     position: relative;
     width: 320px;
-/*    display: none */
 }
 
 #right {
@@ -92,22 +71,18 @@ body {
     width: 960px;
     position: relative;
     top: 70px;
-/*  left: 19% */
     left: calc(50% - 480px);
     background-color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #333;
     line-height: 150%;
- /*   padding: 20px 10px 20px 10px; */
     padding: 0;
- /*   margin: 10px; */
     z-index: -1;
 }
 
 #About-Me {
     top: 20px;
     width: 960px;
- /*   left: -10px; */
     left: calc(50% - 480px);
     position: relative;
     float: left;
@@ -118,21 +93,17 @@ body {
     width: 960px;
     position: relative;
     top: 70px;
- /*   left: 19%; */
     left: calc(50% - 480px);
     background-color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #333;
     line-height: 150%;
- /*   padding: 20px 10px 20px 10px; */
     padding: 0;
- /*   margin: 10px; */
 }
 
 h2 {
     position: relative;
     margin: 0;;
- /*   top: -10px; */
     padding: 20px;
     color: #4aaaa5;
     border-bottom: 2px solid #cccccc;
@@ -168,10 +139,8 @@ img {
 }
 
 #Contact-Form {
-    /*   top: 15px; */
        top: 20px;
        width: 960px;
-    /*   left: -10px; */
        left: calc(50% - 480px);
        position: relative;
        float: left;
@@ -181,26 +150,31 @@ img {
 label {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
+    padding: 5px;
+    margin: 5px;
 }
 
 #name {
-    width: 100%;
+    width: 95%;
     padding: 5px;
+    margin: 5px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
 
 #mail {
-    width: 100%;
+    width: 95%;
     padding: 5px;
+    margin: 5px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
 
 #msg {
-    width: 100%;
+    width: 95%;
     height: 250px;
     padding: 5px;
+    margin: 5px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
@@ -219,10 +193,8 @@ label {
 }
 
 #Portfolio-Page {
- /*   top: 15px; */
     top: 20px;
     width: 960px;
- /*   left: -10px; */
     left: calc(50% - 480px);
     position: relative;
     float: left;
