--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,13 @@ body {
     background-image: url("../images/circles-light.png");
 }
 
+/* Top Navigation Bar */
+
 .topcontainer {  
     position: fixed;
     top: 0;
     left: calc(50% - 480px);
     background-color: #ffffff;
-    font-family: 'Georgia', Times, Times New Roman, serif;
     color: #333;
     border-bottom: 2px solid #cccccc;
     padding: 0;
@@ -49,6 +50,11 @@ body {
     clear: both;
     float: right;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     color: #333;
 }
 
@@ -67,10 +73,12 @@ body {
     padding: 0 10px;
 }
 
+/* About Me */
+
 #container {
     width: 960px;
     position: relative;
-    top: 70px;
+    top: 4.375em;
     left: calc(50% - 480px);
     background-color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -89,21 +97,33 @@ body {
     background-color: #ffffff;
 }
 
-#form {
-    width: 960px;
-    position: relative;
-    top: 70px;
-    left: calc(50% - 480px);
-    background-color: #ffffff;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: #333;
-    line-height: 150%;
-    padding: 0;
+#profile-picture {
+    float: left;
+    padding: 10 px;
 }
 
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: normal;
+}
+
+
 h2 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
     position: relative;
-    margin: 0;;
+    margin: 0;
     padding: 20px;
     color: #4aaaa5;
     border-bottom: 2px solid #cccccc;
@@ -111,25 +131,14 @@ h2 {
 
 p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    display: block;
+    font-size: 1em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     color: rgba(126, 122, 122, 0.8);
     padding: 10px;
-}
-
-#profile-picture {
-    float: left;
-    padding: 10 px;
-}
-
-footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    text-align: center;
-    padding: 5px;
-    background-color: #666666;
-    color: #4aaaa5;
-    border-top: 8px solid #4aaaa5
 }
 
 img {
@@ -138,14 +147,34 @@ img {
     background-color: #ffffff;
 }
 
+/* Contact */
+
+   #form {
+    width: 960px;
+    left: calc(50% - 480px);
+    position: relative;
+    top: 4.375em;
+    background-color: #ffffff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    display: block;
+    font-size: 1em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    color: #333;
+    line-height: 150%;
+    padding: 0;
+}
+
 #Contact-Form {
-       top: 20px;
-       width: 960px;
-       left: calc(50% - 480px);
-       position: relative;
-       float: left;
-       background-color: #ffffff;
-   }
+    width: 960px;
+    left: calc(50% - 480px);
+    position: relative;
+    top: 7px;
+    float: left;
+    background-color: #ffffff;
+}
 
 label {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -192,6 +221,8 @@ label {
     cursor: pointer;
 }
 
+/* Portfolio */
+
 #Portfolio-Page {
     top: 20px;
     width: 960px;
@@ -235,3 +266,17 @@ label {
   padding-left: 5px;
   padding-right: 5px;
  }
+
+/* Footer */
+
+ footer {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    padding: 5px;
+    background-color: #666666;
+    color: #4aaaa5;
+    border-top: 8px solid #4aaaa5
+}
