--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 
 body {
     display: block;
+    height: 100vh;
     background-image: url("../images/circles-light.png");
   }
 
@@ -102,6 +103,14 @@ body {
 #profile-picture {
     float: left;
     padding: 10 px;
+}
+
+a {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    display: block;
+    font-size: 1em;
+    color: rgba(126, 122, 122, 0.8);
+    text-decoration: none;
 }
 
 h1 {
@@ -269,14 +278,21 @@ label {
   padding-right: 5px;
  }
 
+ h5 {
+    padding: 10px;
+    margin: 10px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1e;
+    color: #b9bdbc;
+ }
+
  footer {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 75px;
     text-align: center;
     background-color: #666666;
-    color: #4aaaa5;
     border-top: 8px solid #4aaaa5;
   }
