--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@
 
 body {
     display: block;
-    height: calc(100vh-75px);
     background-image: url("../images/circles-light.png");
   }
 
@@ -107,9 +106,11 @@ body {
 #About-Me {
     top: 20px;
     width: 960px;
+    height: calc(100vh - 200px);
     position: relative;
     float: left;
     background-color: #ffffff;
+    overflow-y: auto;
 }
 
 #profile-picture {
@@ -173,10 +174,12 @@ img {
 /* Contact */
 
    #form {
+    height: calc(100vh - 200px);
+    overflow-y: auto;
     width: 960px;
     left: calc(50% - 480px);
     position: relative;
-    top: 4.375em;
+    top: 5.675em;
     background-color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     display: block;
@@ -188,9 +191,10 @@ img {
 
 #Contact-Form {
     width: 960px;
+    height: calc(100vh - 200px);
     left: calc(50% - 480px);
     position: relative;
-    top: 20px;
+    top: 40px;
     float: left;
     background-color: #ffffff;
     z-index: 1;
@@ -206,7 +210,7 @@ label {
 #name {
     width: 95%;
     padding: 5px;
-    margin: 5px;
+    margin: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
@@ -214,7 +218,7 @@ label {
 #mail {
     width: 95%;
     padding: 5px;
-    margin: 5px;
+    margin: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
@@ -223,7 +227,7 @@ label {
     width: 95%;
     height: 250px;
     padding: 5px;
-    margin: 5px;
+    margin: 20px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: rgba(126, 122, 122, 0.8);
 }
@@ -247,6 +251,8 @@ label {
     top: 20px;
     width: 960px;
     left: calc(50% - 480px);
+    height: calc(100vh - 200px);
+    overflow-y: auto;
     position: relative;
     float: left;
     background-color: #ffffff;
@@ -304,4 +310,5 @@ label {
     text-align: center;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
+    z-index: 5;
   }
